# PaperBase

./: .env.example  .gitattributes  .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  INGEST_VERIFICATION.md  PHASE2_BLOCKING_RESOLVED.md  PHASE2_DELIVERY_REPORT.md  PHASE3-4_PROGRESS_REPORT.md  PHASE3-5_FINAL_REPORT.md  PHASE3-5_PLANNING_REPORT.md  PHASE3_COMPLETION_REPORT.md  README.md  README.md.backup  README_EN.md  TASK4_COMPLETION_REPORT.md  TEST_REPORT_2026-07-09.md  check_docs.py  pyproject.toml  quick_verify_ingest.py  test_ingest_manual.py  test_papers.txt  test_quick.py  test_zotero_pdf.py  知识库思路讨论.txt
.backup/: entities_backup.json
.backup/entity-extraction/: entity_manager.py
.superpowers/sdd/: final-review-package.diff  progress.md  task-1-review-package.diff  task-2-fix-review.diff  task-2-review-package.diff  task-3-review-package.diff  task-4-review-package.diff
config/: paperbase.yaml  terminology.yaml
docs/: MIGRATION-GUIDE.md  ROADMAP.md  graph-update-strategy.md  graphify-integration-technical-guide.md  implementation-report.md  installation.md  issues-summary.md  prompt-design-rationale.md
docs/architecture/: storage-layout.md
docs/archive/: CLEANUP_REPORT_2026-07-08.md  README.md
docs/guides/: graphify-integration-guide.md
docs/improvements/: config-refactoring-DONE.md  config-refactoring.md  extract-command.md
docs/integrations/: zotero.md
docs/schemas/: validation-rules.md
docs/troubleshooting/: graphify-issues.md  llm-config-issues.md  online-fetch-limitations.md
docs/usage/: search.md
scripts/: install.ps1  install.sh  migrate_validated_to_normalized.py  regenerate_chunks.py  setup_skills.py  test_search_cli.py  verify_phase3.py  verify_phase5.py
skills/: README.md
skills/paperbase/: CHANGELOG.md  README.md  SKILL.md  __init__.py  paperbase-wrapper.ps1  paperbase-wrapper.sh  (+2 more)
skills/paperbase-skill/: README.md  SKILL.md  install.ps1  install.sh  paperbase-wrapper.ps1  paperbase-wrapper.sh  workspaces.json
tests/: __init__.py
(+120 files in other folders)
