[project]
name = "paperbase"
version = "0.1.0"
description = "Academic paper knowledge base infrastructure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pymupdf>=1.24.0",
    "markitdown[pdf]>=0.0.1",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]
online-fetch = [
    "paper-fetch-skill @ git+https://github.com/Dictation354/paper-fetch-skill.git@10e30297df2cc7c354c1cb407a8514b22d2800d8",
]

[project.scripts]
paperbase = "paperbase.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=paperbase --cov-report=term-missing"
